Fix FieldEditor hint icon alignment

--- a/src/ui/components/FieldEditor/FieldEditor.scss
+++ b/src/ui/components/FieldEditor/FieldEditor.scss
@@ -69,9 +69,7 @@
     }
 
     &__source-section-hint {
-        top: 5px;
         left: 5px;
-        height: 16px;
     }
 
     &__row {
